--- a/style.css
+++ b/style.css
@@ -1,10 +1,12 @@
 body {
     background-color: #f5f9fc;
+    color: #dddddd;
 }
 .title {
     color: #E3DEF1;
     font-size: 100px;
     text-align: center;
+    margin: 78px 0 10px;
 }
 .todo-warapper {
     display: block;
@@ -15,7 +17,7 @@ body {
     height: 30px;
     border: 1px solid #dddddd;
     box-shadow: 0px 0px 1px #dddddd;
-    margin-bottom: 5px;
+    margin-bottom: 15px;
 }
 .input-task:focus,
 .input-time:focus {
@@ -25,7 +27,7 @@ body {
     color: #dddddd;
   }
 .button-box {
-    color: #dddddd;
+    margin-bottom: 15px;
 }
 .input-time {
     border: 1px solid #dddddd;
@@ -39,7 +41,7 @@ body {
 }
 .task-list {
     width: 300px;
-    margin: 0 auto;
+    margin: 0 auto 5px;
 }
 .task-text {
     display: flex;
@@ -48,6 +50,7 @@ body {
     padding: 5px;
     text-align: left;
     color: #adadad;
+    margin-bottom: 5px;
 }
 
 .timer-display {
@@ -70,7 +73,7 @@ body {
     background-color: #f5f9fc;
 }
 .delete-button {
-    background-image: url(./img/delete_remove_bin_icon-icons.com_72400.png);
+    background-image: url(./img/trash_recycle_bin_trash_delete_icon_233406.png);
     background-repeat: no-repeat;
     background-size: contain; /* 画像をボタン内に収める */
     width: 20px;
